update nav show

--- a/jfxShopping/list.html
+++ b/jfxShopping/list.html
@@ -83,11 +83,11 @@
                 <!-- 导航内容列表 -->
                 <div class="nav_position">
                     <ul class="navbar-nav text-center">
-                        <li class="px-lg-5 py-4 py-md-3 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#newproduct" data-toggle="dropdown" class="nav-link text-dark">系列</a>
+                        <li class="px-lg-5 py-4 py-md-3 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative ">
+                                <a href="#" class="nav-link text-dark ">系列</a>
                                 <!-- 系列-->
-                                <div class="dropdown-menu subnav my-0" id="newproduct">
+                                <div class=" subnav my-0 nav_cont" id="newproduct">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_new.jpg" alt=""></div>
                                         <ul class="col-md-8">
@@ -102,11 +102,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#cy" data-toggle="dropdown" class="nav-link text-dark">成衣</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#"  class="nav-link text-dark ">成衣</a>
                                 <!-- 成衣 -->
-                                <div class="dropdown-menu subnav my-0" id="cy">
+                                <div class=" subnav my-0 nav_cont" id="cy">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_cs.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -150,11 +150,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#bd" data-toggle="dropdown" class="nav-link text-dark">包袋</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">包袋</a>
                                 <!-- 包袋 -->
-                                <div class="dropdown-menu subnav my-0" id="bd">
+                                <div class="nav_cont subnav my-0" id="bd">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_bag.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -188,11 +188,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#xl" data-toggle="dropdown" class="nav-link text-dark">鞋履</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">鞋履</a>
                                 <!-- 鞋履 -->
-                                <div class="dropdown-menu subnav my-0" id="xl">
+                                <div class="nav_cont subnav my-0" id="xl">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_x.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -224,11 +224,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#ps" data-toggle="dropdown" class="nav-link text-dark">配饰</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">配饰</a>
                                 <!-- 配饰 -->
-                                <div class="dropdown-menu subnav my-0" id="ps">
+                                <div class="nav_cont subnav my-0" id="ps">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_new.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
