--- a/jfxShopping/index.html
+++ b/jfxShopping/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-md-5 col-3 mt-3 ">
                     <ul class="d-flex justify-content-md-end">
-                        <li class="loginck">
+                        <li class="loginck d-none d-md-block">
                             <a href="login.html" class="mr-3 pb-0 pt-2 d-md-inline-block d-none text-dark small" style="cursor: pointer" onmouseover="showlogin()">登陆</a>
                             <span class="checksh"></span>
                             <div id="login" class="collapse login bg-white" >
@@ -56,7 +56,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="accountck">
+                        <li class="accountck d-none d-md-block">
                             <!--<a href="#" class="mr-3 pb-0 pt-2 d-md-inline-block d-none text-dark small" style="cursor: pointer" onmouseover="showaccount()">我的账户：<span><b>x</b></span></a>
                             <span class="afterchecksh"></span>
                             <div id="account" class=" login account bg-white">
@@ -82,11 +82,11 @@
                 <!-- 导航内容列表 -->
                 <div class="nav_position">
                     <ul class="navbar-nav text-center">
-                        <li class="px-lg-5 py-4 py-md-3 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#newproduct" data-toggle="dropdown" class="nav-link text-dark">系列</a>
+                        <li class="px-lg-5 py-4 py-md-3 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative ">
+                                <a href="#" class="nav-link text-dark ">系列</a>
                                 <!-- 系列-->
-                                <div class="dropdown-menu subnav my-0" id="newproduct">
+                                <div class=" subnav my-0 nav_cont" id="newproduct">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_new.jpg" alt=""></div>
                                         <ul class="col-md-8">
@@ -101,11 +101,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#cy" data-toggle="dropdown" class="nav-link text-dark">成衣</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#"  class="nav-link text-dark ">成衣</a>
                                 <!-- 成衣 -->
-                                <div class="dropdown-menu subnav my-0" id="cy">
+                                <div class=" subnav my-0 nav_cont" id="cy">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_cs.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -149,11 +149,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#bd" data-toggle="dropdown" class="nav-link text-dark">包袋</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">包袋</a>
                                 <!-- 包袋 -->
-                                <div class="dropdown-menu subnav my-0" id="bd">
+                                <div class="nav_cont subnav my-0" id="bd">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_bag.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -187,11 +187,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#xl" data-toggle="dropdown" class="nav-link text-dark">鞋履</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">鞋履</a>
                                 <!-- 鞋履 -->
-                                <div class="dropdown-menu subnav my-0" id="xl">
+                                <div class="nav_cont subnav my-0" id="xl">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_x.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
@@ -223,11 +223,11 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block">
-                            <div class="dropdown cancelrelative">
-                                <a href="#ps" data-toggle="dropdown" class="nav-link text-dark">配饰</a>
+                        <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
+                            <div class="cancelrelative">
+                                <a href="#" class="nav-link text-dark">配饰</a>
                                 <!-- 配饰 -->
-                                <div class="dropdown-menu subnav my-0" id="ps">
+                                <div class="nav_cont subnav my-0" id="ps">
                                     <div class="container nav_view">
                                         <div class="col-md-4 nav_img"><img src="images/nav_new.jpg" alt=""></div>
                                         <ul class="col-md-8 d-flex">
