--- a/jfxShopping/index.html
+++ b/jfxShopping/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-md-5 col-3 mt-3 ">
                     <ul class="d-flex justify-content-md-end">
-                        <li class="loginck d-none d-md-block">
+                        <li class="loginck">
                             <a href="login.html" class="mr-3 pb-0 pt-2 d-md-inline-block d-none text-dark small" style="cursor: pointer" onmouseover="showlogin()">登陆</a>
                             <span class="checksh"></span>
                             <div id="login" class="collapse login bg-white" >
@@ -421,8 +421,14 @@
                                 </div>
                             </li>
                         </div>
-                        <li class="py-3 nav-item d-block d-md-none">
+                        <li class="py-3 nav-item d-md-none sm_login">
                             <a href="login.html" class="nav-link">登陆</a>
+                        </li>
+                        <li class="py-3 nav-item d-md-none border-bottom border-dark sm_login_account">
+                            <!-- <a href="login.html" class="nav-link">我的账户</a> -->
+                        </li>
+                        <li class="py-3 nav-item d-md-none sm_login_exit">
+                            <!-- <a href="login.html" class="nav-link">注销</a> -->
                         </li>
                     </ul>
                 </div>
