--- a/jfxShopping/login.html
+++ b/jfxShopping/login.html
@@ -420,8 +420,14 @@
                             </div>
                         </li>
                     </div>
-                    <li class="py-3 nav-item d-block d-md-none">
+                    <li class="py-3 nav-item d-md-none sm_login">
                         <a href="login.html" class="nav-link">登陆</a>
+                    </li>
+                    <li class="py-3 nav-item d-md-none border-bottom border-dark sm_login_account">
+                        <!-- <a href="login.html" class="nav-link">我的账户</a> -->
+                    </li>
+                    <li class="py-3 nav-item d-md-none sm_login_exit">
+                        <!-- <a href="login.html" class="nav-link">注销</a> -->
                     </li>
                 </ul>
             </div>
