--- a/jfxShopping/userinfo_address.html
+++ b/jfxShopping/userinfo_address.html
@@ -22,7 +22,8 @@
             <!-- 右上角的登陆和搜索按钮 -->
             <div class="row bg-white topleft">
                 <div class="col-md-5 col-5 px-0">
-                    <a href="#search" data-toggle="modal" class="d-md-none d-inline-block mt-3"><img src="images/search.png" alt=""></a>
+                    <a href="#search" data-toggle="modal" class="d-md-none d-inline-block mt-3"><img
+                            src="images/search.png" alt=""></a>
                 </div>
                 <!-- LOGO -->
                 <div class="col-md-2 col-2 pt-4 pb-3 p-md-4">
@@ -31,18 +32,23 @@
                 <div class="col-md-5 col-3 mt-3 ">
                     <ul class="d-flex justify-content-md-end">
                         <li class="loginck">
-                            <a href="login.html" class="mr-3 pb-0 pt-2 d-md-inline-block d-none text-dark small" style="cursor: pointer" onmouseover="showlogin()">登陆</a>
+                            <a href="login.html" class="mr-3 pb-0 pt-2 d-md-inline-block d-none text-dark small"
+                                style="cursor: pointer" onmouseover="showlogin()">登陆</a>
                             <span class="checksh"></span>
-                            <div id="login" class="collapse login bg-white" >
+                            <div id="login" class="collapse login bg-white">
                                 <div>
                                     <span class="email_msg">请输入您的电子邮箱地址</span>
                                     <label class="emailnotice" for="email" id="emailck">电子邮箱地址*</label>
-                                    <div><input type="text" class="input" id="email"  onfocus="ckfocus('#emailck','20px')" onblur="ckblurs('#emailck','40px','#email')"></div>
+                                    <div><input type="text" class="input" id="email"
+                                            onfocus="ckfocus('#emailck','20px')"
+                                            onblur="ckblurs('#emailck','40px','#email')"></div>
                                 </div>
                                 <div>
                                     <span class="upwd_msg">请输入您的密码</span>
                                     <label class="upwdnotice" for="upwd" id="upwdck">密码*</label>
-                                    <div><input type="password" class="input" id="upwd"  onfocus="ckfocus('#upwdck','20px')" onblur="ckblurs('#upwdck','40px','#upwd')"></div>
+                                    <div><input type="password" class="input" id="upwd"
+                                            onfocus="ckfocus('#upwdck','20px')"
+                                            onblur="ckblurs('#upwdck','40px','#upwd')"></div>
                                 </div>
                                 <div>
                                     <button class="btn btn-block bg-dark mt-4 text-white">登陆</button>
@@ -70,7 +76,8 @@
                                 </ul>
                             </div>-->
                         </li>
-                        <li class="mt-md-1 d-md-block d-none"><a href="#search" data-toggle="modal"><img src="images/search.png" alt=""></a></li>
+                        <li class="mt-md-1 d-md-block d-none"><a href="#search" data-toggle="modal"><img
+                                    src="images/search.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -85,7 +92,7 @@
                     <ul class="navbar-nav text-center">
                         <li class="px-lg-5 py-4 py-md-3 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
                             <div class="cancelrelative ">
-                                <a href="#" class="nav-link text-dark ">系列</a>
+                                <a href="#" class="nav-link text-dark" onclick="toList(0,0,'none',1)">系列</a>
                                 <!-- 系列-->
                                 <div class=" subnav my-0 nav_cont" id="newproduct">
                                     <div class="container nav_view">
@@ -94,7 +101,7 @@
                                             <li class="col-md-3">
                                                 <ul class="nav_list">
                                                     <li>最新系列</li>
-                                                    <li><a href="#">最新系列</a></li>
+                                                    <li><a href="#" onclick="toList(0,0,'none',1)">最新系列</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -104,7 +111,7 @@
                         </li>
                         <li class="py-4 py-md-3 px-lg-5 px-md-3 nav-item subnavborderb d-none d-md-block nav_item">
                             <div class="cancelrelative">
-                                <a href="#"  class="nav-link text-dark ">成衣</a>
+                                <a href="#" onclick="toList('cy',0,'none',0)" class="nav-link text-dark ">成衣</a>
                                 <!-- 成衣 -->
                                 <div class=" subnav my-0 nav_cont" id="cy">
                                     <div class="container nav_view">
@@ -113,36 +120,37 @@
                                             <li class="col-md-3">
                                                 <ul class="nav_list">
                                                     <li>最新系列</li>
-                                                    <li><a href="#">最新系列</a></li>
+                                                    <li><a href="#" onclick="toList('cy',0,0,1)">最新系列</a></li>
                                                 </ul>
                                             </li>
                                             <li class="col-md-3">
                                                 <ul class="nav_list">
                                                     <li>女士</li>
-                                                    <li><a href="#">晚礼服</a></li>
-                                                    <li><a href="#">日常裙装</a></li>
-                                                    <li><a href="#">裤子</a></li>
-                                                    <li><a href="#">裙子</a></li>
-                                                    <li><a href="#">夹克衫</a></li>
-                                                    <li><a href="#">开衫</a></li>
-                                                    <li><a href="#">套头针织衫</a></li>
-                                                    <li><a href="#">T恤</a></li>
-                                                    <li><a href="#">棒球外套</a></li>
-                                                    <li><a href="#">大衣与外套</a></li>
+                                                    <li><a href="#" onclick="toList('cy','wlf',0,0)">晚礼服</a></li>
+                                                    <li><a href="#" onclick="toList('cy','shirt',0,0)">上衣与衬衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','rcqz',0,0)">日常裙装</a></li>
+                                                    <li><a href="#" onclick="toList('cy','kz',0,0)">裤子</a></li>
+                                                    <li><a href="#" onclick="toList('cy','qz',0,0)">裙子</a></li>
+                                                    <li><a href="#" onclick="toList('cy','jks',0,0)">夹克衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','ks',0,0)">开衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','ttzzs',0,0)">套头针织衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','ts',0,0)">T恤</a></li>
+                                                    <li><a href="#" onclick="toList('cy','bqwt',0,0)">棒球外套</a></li>
+                                                    <li><a href="#" onclick="toList('cy','dyywt',0,0)">大衣与外套</a></li>
                                                 </ul>
                                             </li>
                                             <li class="col-md-3">
                                                 <ul class="nav_list">
                                                     <li>男士</li>
-                                                    <li><a href="#">棒球外套</a></li>
-                                                    <li><a href="#">开衫</a></li>
-                                                    <li><a href="#">外衣与外套</a></li>
-                                                    <li><a href="#">套头针织衫</a></li>
-                                                    <li><a href="#">上衣与衬衫</a></li>
-                                                    <li><a href="#">衬衣</a></li>
-                                                    <li><a href="#">西服外套</a></li>
-                                                    <li><a href="#">裤子和短裤</a></li>
-                                                    <li><a href="#">夹克衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','bqwt',1,0)">棒球外套</a></li>
+                                                    <li><a href="#" onclick="toList('cy','ks',1,0)">开衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','wyywt',1,0)">外衣与外套</a></li>
+                                                    <li><a href="#" onclick="toList('cy','ttzzs',1,0)">套头针织衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','shirt',1,0)">上衣与衬衫</a></li>
+                                                    <li><a href="#" onclick="toList('cy','shirtt',1,0)">衬衣</a></li>
+                                                    <li><a href="#" onclick="toList('cy','xfwt',1,0)">西服外套</a></li>
+                                                    <li><a href="#" onclick="toList('cy','kzhdk',1,0)">裤子和短裤</a></li>
+                                                    <li><a href="#" onclick="toList('cy','jks',1,0)">夹克衫</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -463,7 +471,7 @@
                 <li class="nav-item active mx-1"><a href="#" class="nav-item">地址</a></li>
             </ul>
         </div>
-            <!-- 订单-->
+        <!-- 订单-->
         <div class="text-center tab-pane active" id="address_cont">
             <h5>我的账户</h5>
             <h3>订单</h3>
@@ -474,7 +482,7 @@
                         <ul class="text-left mb-3">
                             <li class="address_title">1</li>
                             <li class="username text-muted">帅气X</li>
-                            <li class="address p-0 m-0 text-muted">杭州<br/>五联东苑</li>
+                            <li class="address p-0 m-0 text-muted">杭州<br />五联东苑</li>
                             <li class="phone text-muted">电话：<span>13776522847</span></li>
                         </ul>
                         <ul class=" d-flex flex-row flex-nowrap">
@@ -487,7 +495,7 @@
                         <ul class="text-left mb-3">
                             <li class="address_title">1</li>
                             <li class="username text-muted">帅气X</li>
-                            <li class="address p-0 m-0 text-muted">杭州<br/>五联东苑</li>
+                            <li class="address p-0 m-0 text-muted">杭州<br />五联东苑</li>
                             <li class="phone text-muted">电话：<span>13776522847</span></li>
                         </ul>
                         <ul class=" d-flex flex-row flex-nowrap">
@@ -500,7 +508,7 @@
                         <ul class="text-left mb-3">
                             <li class="address_title">1</li>
                             <li class="username text-muted">帅气X</li>
-                            <li class="address p-0 m-0 text-muted">杭州<br/>五联东苑</li>
+                            <li class="address p-0 m-0 text-muted">杭州<br />五联东苑</li>
                             <li class="phone text-muted">电话：<span>13776522847</span></li>
                         </ul>
                         <ul class=" d-flex flex-row flex-nowrap">
@@ -513,7 +521,7 @@
                         <ul class="text-left mb-3">
                             <li class="address_title">1</li>
                             <li class="username text-muted">帅气X</li>
-                            <li class="address p-0 m-0 text-muted">杭州<br/>五联东苑</li>
+                            <li class="address p-0 m-0 text-muted">杭州<br />五联东苑</li>
                             <li class="phone text-muted">电话：<span>13776522847</span></li>
                         </ul>
                         <ul class=" d-flex flex-row flex-nowrap">
@@ -535,27 +543,36 @@
                                     <div class="d-flex flex-column align-items-end">
                                         <span class="addname_msg">请输入您的地址名称</span>
                                         <label for="addname" id="addnamenotice">地址名称*</label>
-                                        <input type="text" id="addname" onfocus="ckblurs('#addnamenotice','5px','.5rem')" onblur="ckblur('#addnamenotice','25px','1rem','#addname')"/>
+                                        <input type="text" id="addname"
+                                            onfocus="ckblurs('#addnamenotice','5px','.5rem')"
+                                            onblur="ckblur('#addnamenotice','25px','1rem','#addname')" />
                                     </div>
                                     <div class="d-flex flex-column align-items-end">
                                         <span class="username_msg">请填写名字</span>
                                         <label for="username" id="usernamenotice">收件人姓名*</label>
-                                        <input type="text" id="username" onfocus="ckblurs('#usernamenotice','5px','.5rem')" onblur="ckblur('#usernamenotice','25px','1rem','#username')"/>
+                                        <input type="text" id="username"
+                                            onfocus="ckblurs('#usernamenotice','5px','.5rem')"
+                                            onblur="ckblur('#usernamenotice','25px','1rem','#username')" />
                                     </div>
                                     <div class="d-flex flex-column align-items-end">
                                         <span class="address_msg">请输入您的地址</span>
                                         <label for="address" id="addressnotice">地址*</label>
-                                        <input type="text" id="address" onfocus="ckblurs('#addressnotice','5px','.5rem')" onblur="ckblur('#addressnotice','25px','1rem','#address')"/>
+                                        <input type="text" id="address"
+                                            onfocus="ckblurs('#addressnotice','5px','.5rem')"
+                                            onblur="ckblur('#addressnotice','25px','1rem','#address')" />
                                     </div>
                                     <div class="d-flex flex-column align-items-end">
                                         <span class="cityname_msg">请输入您的城市</span>
                                         <label for="cityname" id="citynamenotice">城市*</label>
-                                        <input type="text" id="cityname" onfocus="ckblurs('#citynamenotice','5px','.5rem')" onblur="ckblur('#citynamenotice','25px','1rem','#cityname')"/>
+                                        <input type="text" id="cityname"
+                                            onfocus="ckblurs('#citynamenotice','5px','.5rem')"
+                                            onblur="ckblur('#citynamenotice','25px','1rem','#cityname')" />
                                     </div>
                                     <div class="d-flex flex-column align-items-end">
                                         <span class="phone_msg">请输入您的电话</span>
                                         <label for="phone" id="phonenotice">电话*</label>
-                                        <input type="text" id="phone" onfocus="ckblurs('#phonenotice','5px','.5rem')" onblur="ckblur('#phonenotice','25px','1rem','#phone')"/>
+                                        <input type="text" id="phone" onfocus="ckblurs('#phonenotice','5px','.5rem')"
+                                            onblur="ckblur('#phonenotice','25px','1rem','#phone')" />
                                     </div>
                                     <div>
                                         <button>应用</button>
@@ -607,4 +624,5 @@
     <!--返回顶部按钮-->
     <a href="#nav" class="back">Top</a>
 </body>
+
 </html>
