load person wish

--- a/jfxShopping/userinfo_wish.html
+++ b/jfxShopping/userinfo_wish.html
@@ -16,7 +16,7 @@
     <script src="js/page/userAJAX.js"></script>
 </head>
 
-<body onload="checklogin()">
+<body onload="getWish()">
     <div class="bg"></div>
     <div id="navbar" class="container-fluid px-0 smtopborderb">
         <div class="container ">
@@ -481,7 +481,7 @@
                 <a href="#">点击此处开始添加商品</a>
             </div>
             <div class="d-flex flex-row flex-wrap productlist">
-                <div class="col-lg-4 col-6 p-lg-4 p-3" onmouseover="productchange('.producthide','.productshow')">
+                <!--<div class="col-lg-4 col-6 p-lg-4 p-3" onmouseover="productchange('.producthide','.productshow')">
                     <input type="checkbox" name="buy[]" class="select" />
                     <a href="#" class="d-block w-100"><img
                             src="images\products\BW60GN206T001-01/BW60GN206T001-01-01.jpg" class="producthide w-100"
@@ -496,7 +496,7 @@
                             <p>￥99999.00</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             <div><button class="js">结算</button></div>
             <div class="text-left">显示 <b>1条</b></div>
