del person wish

--- a/jfxShopping/list.html
+++ b/jfxShopping/list.html
@@ -490,11 +490,11 @@
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
                     </div>
                 </div>
@@ -520,11 +520,11 @@
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
                     </div>
                 </div>
@@ -553,11 +553,11 @@
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark">asd<span
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
                                 class="float-right pl-3 pr-1">&times;</span></div>
                     </div>
                 </div>
