--- a/jfxShopping/userinfo_wish.html
+++ b/jfxShopping/userinfo_wish.html
@@ -499,7 +499,7 @@
                 </div>-->
             </div>
             <div><button class="js">结算</button></div>
-            <div class="text-left">显示 <b>1条</b></div>
+            <div class="text-left shownum">显示 <b>1条</b></div>
         </div>
 
     </div>
