search shop && sxq

--- a/jfxShopping/list.html
+++ b/jfxShopping/list.html
@@ -483,19 +483,19 @@
                 <div class="container px-0">
                     <ul>
                         <li><a href="#">NEW IN</a></li>
-                        <li><a href="#">Price Low to High</a></li>
-                        <li><a href="#">Price High to Low</a></li>
+                        <li><a href="#">Low to High</a></li>
+                        <li><a href="#">High to Low</a></li>
                     </ul>
                 </div>
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
                     </div>
                 </div>
                 <div class=" border-bottom border-secondary ">
@@ -511,6 +511,7 @@
                         <li><a href="#">BLACK</a></li>
                         <li><a href="#">PINK</a></li>
                         <li><a href="#">RED</a></li>
+                        <li><a href="#">WHITE</a></li>
                         <li><a href="#">YELLOW</a></li>
                         <li><a href="#">GREEN</a></li>
                         <li><a href="#">ORANGE</a></li>
@@ -520,12 +521,12 @@
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
                     </div>
                 </div>
                 <div class=" border-bottom border-secondary ">
@@ -553,12 +554,12 @@
                 <div class="border-top border-bottom border-secondary ">
                     <div class="container py-3 d-flex">
                         <div class="mx-3 py-1">未选择筛选器</div>
-                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
-                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<span
-                                class="float-right pl-3 pr-1">&times;</span></div>
+                        <div class="sxqprice mx-3 pl-3 py-1 border border-dark sxqTag_order">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqcolor mx-3 pl-3 py-1 border border-dark sxqTag_color">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
+                        <div class="sxqsize mx-3 pl-3 py-1 border border-dark sxqTag_size">0<!--<span
+                                class="float-right pl-3 pr-1">&times;</span>--></div>
                     </div>
                 </div>
                 <div class=" border-bottom border-secondary ">
