--- a/jfxShopping/userinfo_wish.html
+++ b/jfxShopping/userinfo_wish.html
@@ -466,10 +466,10 @@
     <div class="container px-0" id="main">
         <div class="usernav">
             <ul class="nav">
-                <li class="nav-item mx-1"><a href="#" class="nav-item">订单</a></li>
-                <li class="nav-item active mx-1"><a href="#" class="nav-item">心愿单</a></li>
-                <li class="nav-item mx-1"><a href="#" class="nav-item">个人信息</a></li>
-                <li class="nav-item mx-1"><a href="#" class="nav-item">地址</a></li>
+                <li class="nav-item mx-1"><a href="#" class="nav-item" onclick="choosePersonInfo('userinfo_dd.html')">订单</a></li>
+                <li class="nav-item active mx-1"><a href="#" class="nav-item" onclick="choosePersonInfo('userinfo_wish.html')">心愿单</a></li>
+                <li class="nav-item mx-1"><a href="#" class="nav-item" onclick="choosePersonInfo('userinfo_person.html')">个人信息</a></li>
+                <li class="nav-item mx-1"><a href="#" class="nav-item" onclick="choosePersonInfo('userinfo_address.html')">地址</a></li>
             </ul>
         </div>
         <!-- 心愿单-->
