--- a/jfxShopping/list.html
+++ b/jfxShopping/list.html
@@ -450,7 +450,7 @@
                 <div class="search_position">
                     <div class="container">
                         <input type="text" class="w-75" id="searchcont" placeholder="搜索" />
-                        <button class="btn btn-dark search_btn">开始搜索</button>
+                        <button class="btn btn-dark search_btn" onclick="searchShop()">开始搜索</button>
                         <span class="close" data-dismiss="modal">&times;</span>
                     </div>
                 </div>
@@ -464,7 +464,7 @@
 
     <!--main主体内容-->
     <div class="container-fluid px-0" id="main">
-        <h2 class="toptitle text-center">晚礼服</h2>
+        <h2 class="toptitle text-center">最新系列</h2>
         <!-- 筛选器 -->
         <div class="row mx-0 border-top border-bottom border-secondary">
             <div class="container px-0">
